snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2.module.sha1
5a747b7506b8a25c04f0252bc5a94270110702d7